# app/Http/Controllers/OrganizationController.php
@@ -124,11 +124,10 @@ class OrganizationController extends Controller
     /**
      * @OA\Post(
      *     path="/api/v1/organization/staff/signup",
-     *     summary="Create a user within an organization",
-     *     security={
-     *         {"bearerAuth": {}}
-     *     },
+     *     summary="Create a user within an organization using an invitation token",
+     *     tags={"Organization Staff"},
      *     @OA\RequestBody(
+     *         required=true,
      *         @OA\MediaType(
      *             mediaType="application/json",
      *             @OA\Schema(
@@ -149,12 +148,8 @@ class OrganizationController extends Controller
      *                     type="string"
      *                 ),
      *                 @OA\Property(
-     *                     property="is_admin",
-     *                     type="boolean"
-     *                 ),
-     *                 @OA\Property(
-     *                     property="org_id",
-     *                     type="integer"
+     *                     property="password",
+     *                     type="string"
      *                 ),
      *                 @OA\Property(
      *                     property="phone",
@@ -162,30 +157,54 @@ class OrganizationController extends Controller
      *                 ),
      *                 @OA\Property(
      *                     property="profile_pic",
-     *                     type="file",
-     *                     example="picture_url.jpg"
+     *                     type="string",
+     *                     format="binary",
+     *                     description="Optional: Profile picture (if provided)"
      *                 ),
-     *                 example={"first_name": "John","last_name": "Doe","email": "john.doe@example.com", "otp_token": "123456", "is_admin": false, "org_id": 1, "phone": "1234567890", "profile_pic": "example.jpg"}
+     *                 example={
+     *                     "first_name": "John",
+     *                     "last_name": "Doe",
+     *                     "email": "john.doe@example.com",
+     *                     "otp_token": "123456",
+     *                     "password": "your_password",
+     *                     "phone": "1234567890",
+     *                     "profile_pic": "example.jpg",
+     *                 }
      *             )
      *         )
      *     ),
-     *     @OA\Response(
-     *         response=200,
-     *         description="OK",
-     *         @OA\JsonContent(
-     *             @OA\Examples(example="result", value={"status_code":201, "message":"User signed up successfully", "status":"success", "data":{}}, summary="Create a user within an organization using an invitation token"),
-     *         )
-     *     ),
-     *     @OA\Response(
-     *         response=401,
-     *         description="UNAUTHORIZED",
-     *         @OA\JsonContent(
-     *             @OA\Examples(example="result", value={"status_code":401, "status":"failed", "message":"Authentication failed"}, summary="Create a user within an organization using an invitation token"),
-     *         )
-     *     )
+     *      @OA\Response(
+     *      response=201,
+     *      description="User signed up successfully",
+     *      @OA\JsonContent(
+     *          @OA\Property(property="status_code", type="integer", example=201),
+     *          @OA\Property(property="status", type="string", example="success"),
+     *          @OA\Property(property="message", type="string", example="User signed up successfully"),
+     *          @OA\Property(
+     *              property="data",
+     *              type="object",
+     *              @OA\Property(property="id", type="integer", example=1),
+     *              @OA\Property(property="first_name", type="string", example="John"),
+     *              @OA\Property(property="last_name", type="string", example="Doe"),
+     *              @OA\Property(property="email", type="string", example="john.doe@example.com"),
+     *              @OA\Property(property="is_admin", type="boolean", example=false),
+     *              @OA\Property(property="org_id", type="integer", example=1),
+     *              @OA\Property(property="phone", type="string", example="1234567890"),
+     *              @OA\Property(property="profile_pic", type="string", example="example.jpg"),
+     *          )
+     *      )
+     *  ),
+     *      @OA\Response(
+     *          response=401,
+     *          description="Authentication failed",
+     *          @OA\JsonContent(
+     *              @OA\Property(property="status_code", type="integer", example=401),
+     *              @OA\Property(property="status", type="string", example="error"),
+     *              @OA\Property(property="message", type="string", example="Authentication failed")
+     *          )
+     *      )
      * )
      */
-
     public function createOrganizationUser(StoreUserRequest $request)
     {
 
@@ -291,31 +310,6 @@ class OrganizationController extends Controller
 
 
     /**
-     * Retrieve a list of organizations.
-     *
-     * Retrieves a list of organizations that are not marked as deleted.
-     *
-     * @group Organizations
-     * @authenticated
-     * @return \Illuminate\Http\JsonResponse
-     *
-     * @response {
-     *     "data": [
-     *         {
-     *             "id": 1,
-     *             "name": "Organization 1",
-     *             "lunch_price": 2000
-     *         },
-     *          {
-     *              "id": 2,
-     *              "name": "Organization 2",
-     *              "lunch_price": 1000
-     *          },
-     *
-     *     ]
-     * }
-     */
-           /**
      * @OA\Get(
      *     path="/api/v1/organization",
      *     summary="Get a list of organizations not deleted",
